<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    style="@style/fragment_background"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            />

        <LinearLayout
            style="@style/fragment_layout_container_style"
            >


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_login"
                style="@style/primary_text_view_style"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_login_hint"
                style="@style/secondary_text_view_style"
                android:gravity="center"
                />

            <include layout="@layout/social_login"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_grade_black_48px"
                android:hint="@string/hint_email_or_phone_num"
                style="@style/edittext_style"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_grade_black_48px"
                android:hint="@string/hint_password"
                style="@style/edittext_style"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/msg_forgot_password"
                    android:gravity="end"
                    style="@style/secondary_text_view_style"
                    />

            </LinearLayout>

            <com.jcminarro.roundkornerlayout.RoundKornerLinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/accent_rounded_button_layout_style"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_login"
                    style="@style/primary_text_view_style"
                    />

            </com.jcminarro.roundkornerlayout.RoundKornerLinearLayout>


        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>


    </LinearLayout>

    <LinearLayout
        style="@style/bottom_full_width_button_layout_style"
        >

        <TextView
            style="@style/bottom_full_width_button_text_style"
            android:text="@string/msg_want_to_add_acc"
            />

    </LinearLayout>

</LinearLayout>
