<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent" >

    <ProgressBar
        android:layout_gravity="center"
        android:id="@+id/progressView"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <LinearLayout style="@style/fragment_layout_container_style">


                <TextView
                    style="@style/primary_text_view_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/forget_message_head" />


                <FrameLayout
                    style="@style/custom_image_edittext_compound_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        style="@style/custom_image_edittext_compound_imageview"
                        android:src="@drawable/profile_user" />

                    <EditText
                        android:id="@+id/code_input"
                        style="@style/custom_image_edittext_compound_edittext"
                        android:hint="@string/hint_email_or_phone_num"
                        android:inputType="text"
                        android:imeOptions="actionDone"
                        />

                </FrameLayout>


                <com.jcminarro.roundkornerlayout.RoundKornerLinearLayout
                    android:id="@+id/fragment_message_sent_confirm"
                    style="@style/accent_rounded_button_layout_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp">

                    <TextView
                        style="@style/primary_text_view_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/send_password" />

                </com.jcminarro.roundkornerlayout.RoundKornerLinearLayout>


                <com.jcminarro.roundkornerlayout.RoundKornerLinearLayout
                    android:id="@+id/fragment_message_sent_cancel"
                    style="@style/accent_rounded_button_layout_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@color/app_dark_indigo">

                    <TextView
                        style="@style/primary_text_view_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_cancel"
                        android:textColor="@color/white" />

                </com.jcminarro.roundkornerlayout.RoundKornerLinearLayout>


            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />


        </LinearLayout>

        <LinearLayout
            android:visibility="gone"
            style="@style/bottom_full_width_button_layout_style">

            <TextView
                android:id="@+id/do_u_have_account"
                style="@style/bottom_full_width_button_text_style"
                android:text="@string/msg_already_have_account" />

        </LinearLayout>

    </LinearLayout>
</FrameLayout>